<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:id="@+id/lblProtocolVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_protocol_version" />
        <TextView
            android:id="@+id/tvProtocolVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:id="@+id/lblApplicationVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_application_version" />

        <TextView
            android:id="@+id/tvApplicationVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:id="@+id/lblHardwareVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_hardware_version" />

        <TextView
            android:id="@+id/tvHardwareVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:id="@+id/lblEcosVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_ecos_version" />

        <TextView
            android:id="@+id/tvEcosVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
</LinearLayout>